* Implemented FR 2895244 [ERDesignerNG] make the context-menus consistent
* SQL Area and View editor are not syntax highlighted
* Implemented FR 2895576 [ERDesignerNG] TableSelectEditor devide tables from views
* Implemented FR 3158981 [ERDesignerNG] Add SQL Browser the the UI
* Bug Fixing 3056071 [ERDesignerNG] postgres unkown datatype prevent reverse eng.

Release 3.0.0

* Added first version of 3D Model Editor
* Added first version of 2D Interactive Model Editor
* Implemented FR 3317539 [ERDesignerNG] TableSelectEditor: (De)select whole subtrees
* Implemented FR 2895576 [ERDesignerNG] TableSelectEditor devide tab
* Implemented FR 2924838 [ERDesignerNG] Using Oracle' tablespace
* Implemented FR 2880756 [ERDesignerNG] Allow copying of entities and views
* Implemented FR 3413307 [ERDesignerNG] Error changing view 2D -> 3D
* Implemented FR 2895223 [ERDesignerNG] SubjectAreas handling
* Implemented FR 3413009 [ERDesignerNG] Show only the appropriate main-nodes in tree
* Bug Fixing 2899094 [ERDesignerNG] select first *non-system* schema in RevEngEd (re-introduced by buggy commit in v1072)
* Bug Fixing 2975206 [ERDesignerNG] Unknown data type during revers engineering
* Bug Fixing 3306174 [ERDesignerNG] Unknown datatype (2.7.0 release)
* Bug Fixing 3184767 [ERDesignerNG] SQL server 2008 reengineering exception
* Bug Fixing 3161426 [ERDesignerNG] Error saving/loading projet
* Bug Fixing 3317547 [ERDesignerNG] Error during RevEnging Postgres-DB ('Cannot find table in model')
* Bug Fixing 3413026 [ERDesignerNG] the new 3D view does not support loops
* Bug Fixing 3416991 [ERDesignerNG] behaviour (de)selecting objects in diagram
* Bug Fixing 3414627 [ERDesignerNG] SubjectArea issues
* Working on support for Spatial Datatypes & Fulltext indexes
* Added support for model validation & quick fixes
* Added support for anaglyphic 3d mode
* Improved usability of table editor
* Improved usability of domain editor
* Added support for crowfoot notation